# Job-Portal

./: README.md
backend/: db.sqlite3  pyproject.toml
backend/jobs/: admin.py  models.py  serializers.py  urls.py  views.py
backend/jobs/migrations/: 0001_initial.py  0002_remove_savejob_job_remove_savejob_candidate_and_more.py  0003_joblising_savejob.py  0004_savejob_saved_at.py  0005_remove_savejob_candidate.py  0006_savejob_candidate.py  0007_rename_joblising_joblisting.py
backend/main/: settings.py  urls.py
frontend/: .env.sample  middleware.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: ReactQueryProvider.tsx  globals.css  layout.tsx  page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/(root)/contact-us/: ContactDetails.tsx  ContactForm.tsx  ContactUS.tsx  page.tsx
frontend/app/(root)/find-jobs/: page.tsx
frontend/app/(root)/home/: AllJobs.tsx  Title.tsx
frontend/app/(root)/profile/: page.tsx
frontend/app/(root)/save-jobs/: page.tsx
frontend/app/api/auth/[...nextauth]/: route.ts
frontend/app/create-jobs/: page.tsx
frontend/app/shared/: Footer.tsx  Navbar.tsx
frontend/components/ui/: Button.tsx  Card.tsx  Loader.tsx
frontend/config/: index.ts
frontend/context/: authStore.tsx
frontend/helpers/: randomId.ts
frontend/hooks/custom/: useMenus.ts  useOutsideClickHandler.ts
frontend/hooks/reactQuery/: AllJobQuery.ts  CreateJobQuery.ts  RegisterQuery.ts  SaveJobQuery.ts
frontend/lib/: authOptions.ts
frontend/types/: auth.ts
